agrege el parrafo hola

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title> git / github</title>
 </head>
 <body>
-    
+    <P>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem enim pariatur eaque! Fugit, molestias earum. Ullam placeat aperiam quod est commodi! Quo quis natus officiis magnam, ullam modi numquam consequatur.</P>
+    <p>hola</p>
 </body>
 </html>
